nginx-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  labels:
    name: my-nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
